Bug 396294 - Wrongly escaped string under Font Settings
Summary: Wrongly escaped string under Font Settings
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.48.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-08 00:06 UTC by nuc
Modified: 2018-07-20 16:41 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
more corrupted buttons (117.14 KB, image/png)
2018-07-15 10:42 UTC, nuc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nuc 2018-07-08 00:06:08 UTC
When I navigate to System Settings -> Fonts -> Fonts the string in the first button says "\1djust All Fonts..."

I guess it should say "Adjust All Fonts..."
Comment 1 Nate Graham 2018-07-13 20:10:55 UTC
Can't reproduce on git master. Can you attach a screenshot?
Comment 2 nuc 2018-07-14 00:10:11 UTC
It is also mentioned in the first post of this bugreport: https://bugs.kde.org/show_bug.cgi?id=396082
Comment 3 Nate Graham 2018-07-15 03:37:56 UTC
Thanks for the info, can confirm now. Steps to reproduce:
1. Maximize System Settings window
2. Navigate to Fonts
3. Navigate to Colors
4. Navigate to Fonts
5. Navigate to Icons
6. Navigate to Fonts

The "Adjust all Fonts..." button is now messed up.
Comment 4 nuc 2018-07-15 10:42:39 UTC
Created attachment 113940 [details]
more corrupted buttons

Thanks for finding a good way to reproduce :)
Here is another example of the issue but under Mouse Cursor settings.
Comment 5 Marco Martin 2018-07-20 16:41:07 UTC
Git commit 4237168fe0d0215b4b3408bc74e26ef2adef84c4 by Marco Martin.
Committed on 20/07/2018 at 16:40.
Pushed by mart into branch 'master'.

fix searc/replace regexp

M  +1    -1    src/mnemonicattached.cpp

https://commits.kde.org/kirigami/4237168fe0d0215b4b3408bc74e26ef2adef84c4