fix searc/replace regexp

BUG:396294